# agentwell

./: .env.example  .gitignore  PYPI.md  README.md  SPRINT2.md  WHY_AGENTWELL.md  packages-watch.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agentwell/: cli.py  config.py
agentwell/adapters/: __init__.py  ai_proxy.py  litellm.py  openai_compat.py
agentwell/dashboard/: app.py
agentwell/guard/: __init__.py  ai_guard.py  log_redactor.py
agentwell/monitor/: __init__.py  coordination.py  drift.py  quality.py
agentwell/proxy/: server.py
agentwell/storage/: db.py
agentwell/utils/: __init__.py  compress.py
docs/: index.html
docs/testing/: TESTING_LOG.md  TESTING_REPORT.md
examples/: basic_session.py  multi_agent.py  simulation.py  simulation_tasks.py
scripts/: daily_report.py  ec2_setup.sh
tests/: test_coordination.py  test_drift.py  test_quality.py
